# slg_msgs

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  codecov.yml  package.xml  plugin_description.xml
.github/workflows/: build.yml  compiling_test.yml  github-actions-ros.yml
include/simple_laser_geometry/: conversions.h  conversions.hpp  point2D.h  point2D.hpp  polygon.h  polygon.hpp  segment2D.h  segment2D.hpp
include/slg_msgs/: point2D.hpp  polygon.hpp  segment2D.hpp
msg/: Segment.msg  SegmentArray.msg  SegmentStamped.msg
src/: conversions.cpp  segmentArrayDisplay.cpp  segmentArrayDisplay.h
test/: CMakeLists.txt  test_point2d.cpp  test_polygon.cpp  test_segment2d.cpp
