<?xml version="1.0"?>
<package format="2">
	<name>simple_laser_geometry</name>
	<version>1.0.3</version>
	<description>This package contains classes and messages to interact with laser related geometry. Useful to use with LaserScan.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<license>MIT</license>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>rviz</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>tf</depend>
	<depend>pcl_ros</depend>
	<build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>
	<export>
		<rviz plugin="${prefix}/plugin_description.xml"/>
	</export>
</package>
