<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>simple_laser_geometry</name>
	<version>3.2.0</version>
	<description>This package contains classes and messages to interact with laser related geometry. Useful to use with LaserScan.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<license>MIT</license>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>tf2</depend>
	<depend>pcl_ros</depend>
	<exec_depend>rosidl_default_runtime</exec_depend>
	<member_of_group>rosidl_interface_packages</member_of_group>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
